# xClipper

./: .gitignore  CMakeLists.txt  LixClipper.desktop  README.md  xClipper.desktop
scripts/: build_appimage.sh  build_deb.sh
src/: ClipboardManager.cpp  ClipboardManager.h  HistoryWindow.cpp  HistoryWindow.h  main.cpp
